final dockerize configs